Fix paddings and gaps

--- a/styles.less
+++ b/styles.less
@@ -182,14 +182,14 @@ fieldset {
 
 .title {
 	color: @gray-500;
-	margin-bottom: @sp-1;
+	margin-bottom: 2rem;
 	.heading-medium();
 }
 
 .container {
 	text-align: left;
 	display: grid;
-	gap: 2rem;
+	gap: 1.5rem;
 
 	@media (min-width: 48rem) {
 		width: 33.75rem;
@@ -230,7 +230,7 @@ fieldset {
 
 	.settings {
 		background-color: @gray-800;
-		gap: 1.5rem;
+		gap: 2rem;
 		padding: clamp(0rem, 2.2vw, 2rem) 2rem;
 		display: grid;
 		.settings__char-slider {
